--- a/Kaida/Kaida/Kaida.csproj
+++ b/Kaida/Kaida/Kaida.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,18 +9,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00560" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00560" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00560" />
-    <PackageReference Include="DSharpPlus.Rest" Version="4.0.0-nightly-00560" />
-    <PackageReference Include="DSharpPlus.WebSocket.WebSocket4NetCore" Version="4.0.0-nightly-00560" />
-    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.9.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="Serilog" Version="2.7.1" />
-    <PackageReference Include="Serilog.Formatting.Compact" Version="1.0.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
-    <PackageReference Include="StackExchange.Redis" Version="2.0.519" />
+    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00658" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00658" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00658" />
+    <PackageReference Include="DSharpPlus.Rest" Version="4.0.0-nightly-00658" />
+    <PackageReference Include="DSharpPlus.WebSocket.WebSocket4NetCore" Version="4.0.0-nightly-00653" />
+    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.15.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Serilog" Version="2.9.1-dev-01154" />
+    <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00837" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
   </ItemGroup>
 
