--- a/Kaida/Kaida/Kaida.csproj
+++ b/Kaida/Kaida/Kaida.csproj
@@ -2,26 +2,53 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <Authors>Antoine Martins Pacheco</Authors>
     <Company>OnlyOneCookie</Company>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/OnlyOneCookie/Kaida</RepositoryUrl>
+    <RepositoryType>GitHub</RepositoryType>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+    <Optimize>true</Optimize>
+    <NoWarn>1701;1702</NoWarn>
+    <WarningLevel>0</WarningLevel>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <WarningLevel>0</WarningLevel>
+    <PlatformTarget>x64</PlatformTarget>
+    <NoWarn>1701;1702</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00658" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00658" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00658" />
-    <PackageReference Include="DSharpPlus.Rest" Version="4.0.0-nightly-00658" />
+    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00683" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00683" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00683" />
+    <PackageReference Include="DSharpPlus.Rest" Version="4.0.0-nightly-00683" />
     <PackageReference Include="DSharpPlus.WebSocket.WebSocket4NetCore" Version="4.0.0-nightly-00653" />
-    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.15.1" />
+    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.15.5" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Serilog" Version="2.9.1-dev-01154" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00837" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
-    <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
+    <PackageReference Include="StackExchange.Redis" Version="2.1.30" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Modules\Games\" />
+    <Folder Include="Modules\Music\" />
+    <Folder Include="Modules\Logger\" />
+    <Folder Include="Modules\Roleplay\" />
   </ItemGroup>
 
 </Project>
