--- a/Kaida/Kaida/Kaida.csproj
+++ b/Kaida/Kaida/Kaida.csproj
@@ -25,12 +25,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00683" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00683" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00683" />
-    <PackageReference Include="DSharpPlus.Rest" Version="4.0.0-nightly-00683" />
-    <PackageReference Include="DSharpPlus.WebSocket.WebSocket4NetCore" Version="4.0.0-nightly-00653" />
-    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.15.5" />
+    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00684" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00684" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00684" />
+    <PackageReference Include="DSharpPlus.Rest" Version="4.0.0-nightly-00684" />
+    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.16.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -38,7 +37,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Serilog" Version="2.9.1-dev-01154" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00837" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.1.30" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
@@ -47,8 +46,22 @@
   <ItemGroup>
     <Folder Include="Modules\Games\" />
     <Folder Include="Modules\Music\" />
-    <Folder Include="Modules\Logger\" />
     <Folder Include="Modules\Roleplay\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
