Fixed some error handlings

--- a/Kaida/Kaida/Kaida.csproj
+++ b/Kaida/Kaida/Kaida.csproj
@@ -9,6 +9,7 @@
     <RepositoryUrl>https://github.com/OnlyOneCookie/Kaida</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <StartupObject>Kaida.Program</StartupObject>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
