--- a/Kaida/Kaida/Kaida.csproj
+++ b/Kaida/Kaida/Kaida.csproj
@@ -26,17 +26,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00687" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00687" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00687" />
-    <PackageReference Include="DSharpPlus.Rest" Version="4.0.0-nightly-00687" />
-    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.16.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
+    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00688" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00688" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00688" />
+    <PackageReference Include="DSharpPlus.Rest" Version="4.0.0-nightly-00688" />
+    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.16.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="morelinq" Version="3.3.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Serilog" Version="2.9.1-dev-01154" />
+    <PackageReference Include="Serilog" Version="2.9.1-dev-01172" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
