Restructured project phase 1

--- a/src/Defcon/Defcon.csproj
+++ b/src/Defcon/Defcon.csproj
@@ -67,6 +67,7 @@
 			<AutoGen>True</AutoGen>
 			<DependentUpon>Resources.resx</DependentUpon>
 		</Compile>
+		<Compile Remove="ApplicationInformation.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
