New reference to the mysql nuget

--- a/src/Defcon.Core/Defcon.Core.csproj
+++ b/src/Defcon.Core/Defcon.Core.csproj
@@ -4,4 +4,12 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Entities" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00720" />
+    </ItemGroup>
+
 </Project>
