--- a/src/Defcon/Defcon.csproj
+++ b/src/Defcon/Defcon.csproj
@@ -45,6 +45,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="morelinq" Version="3.3.2" />
+		<PackageReference Include="MySqlConnector" Version="1.0.1" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 		<PackageReference Include="Serilog" Version="2.10.0-dev-01240" />
 		<PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
