--- a/src/Defcon.Core/Defcon.Core.csproj
+++ b/src/Defcon.Core/Defcon.Core.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00720" />
+      <PackageReference Include="MySqlConnector" Version="1.0.1" />
     </ItemGroup>
 
 </Project>
