--- a/src/Defcon.Data/Defcon.Data.csproj
+++ b/src/Defcon.Data/Defcon.Data.csproj
@@ -4,10 +4,16 @@
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<Authors>Antoine Martins Pacheco</Authors>
 		<Company>AMP Development</Company>
-		<Product>DEFCON</Product>
-		<Copyright>AMP Development</Copyright>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 		<RepositoryUrl>https://github.com/AMPDevelopment/DEFCON</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
+		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+		<AssemblyVersion>0.1.0.0</AssemblyVersion>
+		<FileVersion>0.1.0.0</FileVersion>
+		<Version>0.1.0</Version>
+		<Copyright>AMP Development</Copyright>
+		<Product>DEFCON</Product>
+		<RootNamespace>Defcon.Data</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -19,7 +25,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Defcon.Entities\Defcon.Entities.csproj" />
+	  <ProjectReference Include="..\Defcon.Core\Defcon.Core.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
