--- a/src/Defcon/Defcon.csproj
+++ b/src/Defcon/Defcon.csproj
@@ -12,20 +12,21 @@
 		<StartupObject>Defcon.Program</StartupObject>
 		<AssemblyVersion>0.1.0.0</AssemblyVersion>
 		<FileVersion>0.1.0.0</FileVersion>
-		<Version>1.0.0</Version>
+		<Version>0.1.0</Version>
 		<Copyright>AMP Development</Copyright>
 		<Product>DEFCON</Product>
+		<RootNamespace>Defcon</RootNamespace>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<PlatformTarget>x64</PlatformTarget>
-		<Optimize>true</Optimize>
 		<NoWarn>1701;1702</NoWarn>
 		<WarningLevel>0</WarningLevel>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 		<WarningLevel>0</WarningLevel>
+		<Optimize>true</Optimize>
 		<PlatformTarget>x64</PlatformTarget>
 		<NoWarn>1701;1702</NoWarn>
 	</PropertyGroup>
@@ -60,25 +61,12 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\Defcon.Core\Defcon.Core.csproj" />
 	  <ProjectReference Include="..\Defcon.Data\Defcon.Data.csproj" />
-	  <ProjectReference Include="..\Defcon.Entities\Defcon.Entities.csproj" />
 	  <ProjectReference Include="..\Defcon.Library\Defcon.Library.csproj" />
 	  <ProjectReference Include="..\Defcon.Modules\Defcon.Modules.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<Compile Update="Properties\Resources.Designer.cs">
-			<DesignTime>True</DesignTime>
-			<AutoGen>True</AutoGen>
-			<DependentUpon>Resources.resx</DependentUpon>
-		</Compile>
 		<Compile Remove="ApplicationInformation.cs" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<EmbeddedResource Update="Properties\Resources.resx">
-			<Generator>ResXFileCodeGenerator</Generator>
-			<LastGenOutput>Resources.Designer.cs</LastGenOutput>
-		</EmbeddedResource>
 	</ItemGroup>
 
 </Project>
