--- a/src/Defcon.Modules/Defcon.Modules.csproj
+++ b/src/Defcon.Modules/Defcon.Modules.csproj
@@ -40,7 +40,6 @@
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
       <PackageReference Include="StackExchange.Redis.Extensions.Core" Version="6.3.4" />
       <PackageReference Include="StackExchange.Redis.Extensions.Newtonsoft" Version="6.3.4" />
-      <PackageReference Include="SteamCSharp" Version="0.1.0" />
       <PackageReference Include="Utf8Json" Version="1.3.7" />
     </ItemGroup>
 
@@ -48,6 +47,10 @@
       <ProjectReference Include="..\Defcon.Core\Defcon.Core.csproj" />
       <ProjectReference Include="..\Defcon.Data\Defcon.Data.csproj" />
       <ProjectReference Include="..\Defcon.Library\Defcon.Library.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Games" />
     </ItemGroup>
 
 </Project>
